--- a/app/src/main/res/layout/buttons_pattern.xml
+++ b/app/src/main/res/layout/buttons_pattern.xml
@@ -56,5 +56,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/page_playlist_songs" />
+    <Button
+        android:id="@+id/page_settings"
+        android:layout_width="110dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/white"
+        android:text="Settings"
+        android:textColor="#454545"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/page_player" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
