--- a/app/src/main/res/layout/fragment_songs_page.xml
+++ b/app/src/main/res/layout/fragment_songs_page.xml
@@ -6,6 +6,22 @@
     android:layout_height="match_parent"
     android:background="#DCE775">
 
-    <include layout="@layout/buttons_pattern"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/page_songs_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="8"
+        tools:listitem="@layout/sample_songs_page" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@color/purple_200"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
