Set Add Playlist Granted

--- a/app/src/main/res/layout/fragment_playlists_page.xml
+++ b/app/src/main/res/layout/fragment_playlists_page.xml
@@ -3,9 +3,53 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#81C784">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/buttons_pattern"/>
+    <!--    <include layout="@layout/buttons_pattern"/>-->
+
+    <TextView
+        android:id="@+id/new_player"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/new_player"
+        android:textColor="@color/text_color"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/enter_player_name" />
+
+    <EditText
+        android:id="@+id/enter_player_name"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="8dp"
+        android:background="#80FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/button_new_player"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/ic_add"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/enter_player_name"
+        android:backgroundTint="@color/text_color" />
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="56dp"
+        android:id="@+id/page_playlists_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        tools:itemCount="5"
+        tools:listitem="@layout/sample_view_playlists" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
