--- a/app/src/main/res/layout/sample_songs_page.xml
+++ b/app/src/main/res/layout/sample_songs_page.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
+        android:textColor="@color/text_color"
         android:text="@string/sample_example_title"
         app:layout_constraintStart_toEndOf="@+id/page_songs_poster"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +32,7 @@
         android:layout_marginStart="8dp"
         android:text="@string/sample_example_artist"
         android:textSize="10sp"
+        android:textColor="@color/text_color"
         app:layout_constraintStart_toEndOf="@+id/page_songs_poster"
         app:layout_constraintTop_toBottomOf="@+id/page_songs_title" />
 
