Set Delete Playlist And Validation Granted

--- a/app/src/main/res/layout/fragment_playlists_page.xml
+++ b/app/src/main/res/layout/fragment_playlists_page.xml
@@ -36,17 +36,18 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/ic_add"
+        android:backgroundTint="@color/text_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/enter_player_name"
-        android:backgroundTint="@color/text_color" />
-
+        app:layout_constraintTop_toTopOf="@+id/enter_player_name" />
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="56dp"
         android:id="@+id/page_playlists_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="56dp"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
         tools:itemCount="5"
