Set View BottomPlayer Granted

--- a/app/src/main/res/layout/fragment_playlist_songs_page.xml
+++ b/app/src/main/res/layout/fragment_playlist_songs_page.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#9575CD">
+    android:layout_height="match_parent">
 
-    <include layout="@layout/buttons_pattern"/>
+<!--    <include layout="@layout/buttons_pattern"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
