--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
     <color name="text_color">#3A3A3A</color>
+
+    <color name="bg_main_activity">#E1E1E1</color>
+    <color name="bg_bottom_player">#FFFFFF</color>
+    <color name="shape_bottom_player">#4A4A4A</color>
+    <color name="text_bottom_player">#4A4A4A</color>
+    <color name="color_shape">#FF94B8</color>
 </resources>
