--- a/app/src/main/res/layout/sample_view_playlists.xml
+++ b/app/src/main/res/layout/sample_view_playlists.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/purple_200" />
+        android:background="@color/color_shape" />
 
     <ImageView
         android:id="@+id/page_playlist_options"
