Change PlayerFragment to Player Activity Granted

--- a/app/src/main/res/layout/activity_player_page.xml
+++ b/app/src/main/res/layout/activity_player_page.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     android:background="#F06292">
 
-    <include layout="@layout/buttons_pattern"/>
+<!--    <include layout="@layout/buttons_pattern"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
