--- a/app/src/main/res/layout/activity_player_page.xml
+++ b/app/src/main/res/layout/activity_player_page.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F06292">
+    android:background="#F06292"
+    tools:context=".view.screen.PagePlayerActivity">
 
 <!--    <include layout="@layout/buttons_pattern"/>-->
 
