--- a/app/src/main/res/layout/activity_playlist_songs_page.xml
+++ b/app/src/main/res/layout/activity_playlist_songs_page.xml
@@ -3,10 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/purple_200"
+    android:background="@color/color_shape"
     android:layout_height="match_parent"
     tools:context=".view.screen.PagePlaylistSongsActivity">
 
 <!--    <include layout="@layout/buttons_pattern"/>-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/page_playlist_songs_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
