--- a/app/src/main/res/layout/activity_playlist_songs_page.xml
+++ b/app/src/main/res/layout/activity_playlist_songs_page.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/color_shape"
+    android:background="@color/bg_bottom_player"
     android:layout_height="match_parent"
     tools:context=".view.screen.PagePlaylistSongsActivity">
 
@@ -11,6 +11,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/page_playlist_songs_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="8"
+        tools:listitem="@layout/sample_playlist_songs_page"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
