--- a/app/src/main/res/layout/sample_songs_page.xml
+++ b/app/src/main/res/layout/sample_songs_page.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <ImageView
         android:id="@+id/page_songs_poster"
@@ -16,24 +16,42 @@
 
     <TextView
         android:id="@+id/page_songs_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
-        android:textColor="@color/text_color"
+        android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="@string/sample_example_title"
+        android:textColor="@color/text_color"
+        app:layout_constraintEnd_toStartOf="@id/page_songs_options"
         app:layout_constraintStart_toEndOf="@+id/page_songs_poster"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/page_songs_artist"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="@string/sample_example_artist"
-        android:textSize="10sp"
         android:textColor="@color/text_color"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toStartOf="@id/page_songs_options"
         app:layout_constraintStart_toEndOf="@+id/page_songs_poster"
         app:layout_constraintTop_toBottomOf="@+id/page_songs_title" />
+
+    <ImageView
+        android:id="@+id/page_songs_options"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_more_vert"
+        android:backgroundTint="@color/shape_bottom_player"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
