--- a/app/src/main/res/layout/fragment_options_playlist_song.xml
+++ b/app/src/main/res/layout/fragment_options_playlist_song.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/options_top"
+        android:id="@+id/options_pl_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -71,12 +71,36 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/options_play_next"
+        android:id="@+id/options_pl_delete_from_pl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@id/options_top">
+        app:layout_constraintTop_toBottomOf="@id/options_pl_top">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:background="@drawable/ic_delete"
+            android:backgroundTint="@color/text_options_light" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="24dp"
+            android:text="Удалить из плейлиста"
+            android:textColor="@color/text_options_dark"
+            android:textSize="14sp" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/options_pl_play_next"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="8dp"
+        app:layout_constraintTop_toBottomOf="@id/options_pl_delete_from_pl">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -95,12 +119,12 @@
             android:textSize="14sp" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/options_add_to_queue"
+        android:id="@+id/options_pl_add_to_queue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@id/options_play_next">
+        app:layout_constraintTop_toBottomOf="@id/options_pl_play_next">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -119,12 +143,12 @@
             android:textSize="14sp" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/options_add_to_pl"
+        android:id="@+id/options_pl_add_to_pl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@id/options_add_to_queue">
+        app:layout_constraintTop_toBottomOf="@id/options_pl_add_to_queue">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -143,12 +167,12 @@
             android:textSize="14sp" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/options_go_to_album"
+        android:id="@+id/options_pl_go_to_album"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@id/options_add_to_pl">
+        app:layout_constraintTop_toBottomOf="@id/options_pl_add_to_pl">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -167,12 +191,12 @@
             android:textSize="14sp" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/options_go_to_artist"
+        android:id="@+id/options_pl_go_to_artist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@id/options_go_to_album">
+        app:layout_constraintTop_toBottomOf="@id/options_pl_go_to_album">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -191,12 +215,12 @@
             android:textSize="14sp" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/options_search_youtube"
+        android:id="@+id/options_pl_search_youtube"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@id/options_go_to_artist">
+        app:layout_constraintTop_toBottomOf="@id/options_pl_go_to_artist">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -215,12 +239,12 @@
             android:textSize="14sp" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/options_more"
+        android:id="@+id/options_pl_more"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@id/options_search_youtube">
+        app:layout_constraintTop_toBottomOf="@id/options_pl_search_youtube">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -239,12 +263,12 @@
             android:textSize="14sp" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/options_set_as_ringtone"
+        android:id="@+id/options_pl_set_as_ringtone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@id/options_more">
+        app:layout_constraintTop_toBottomOf="@id/options_pl_more">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -263,12 +287,12 @@
             android:textSize="14sp" />
     </LinearLayout>
     <LinearLayout
-        android:id="@+id/options_delete_from_memories"
+        android:id="@+id/options_pl_delete_from_memories"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
-        app:layout_constraintTop_toBottomOf="@id/options_set_as_ringtone">
+        app:layout_constraintTop_toBottomOf="@id/options_pl_set_as_ringtone">
 
         <ImageView
             android:layout_width="wrap_content"
