--- a/app/src/main/res/layout/sample_songs_page.xml
+++ b/app/src/main/res/layout/sample_songs_page.xml
@@ -2,16 +2,31 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:layout_height="wrap_content">
+
+
+
+    <FrameLayout
+        android:id="@+id/page_songs_bg"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:background="@color/color_sample_bg"
+        android:visibility="gone"
+        android:layout_height="76dp"/>
+    <FrameLayout
+        android:id="@+id/page_songs_add_song"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="76dp"/>
 
     <ImageView
         android:id="@+id/page_songs_poster"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_marginStart="16dp"
         android:background="@color/color_shape"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -27,7 +42,7 @@
         android:textColor="@color/text_color"
         app:layout_constraintEnd_toStartOf="@id/page_songs_options"
         app:layout_constraintStart_toEndOf="@+id/page_songs_poster"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/page_songs_poster" />
 
     <TextView
         android:id="@+id/page_songs_artist"
@@ -48,6 +63,7 @@
         android:id="@+id/page_songs_options"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:background="@drawable/ic_more_vert"
         android:backgroundTint="@color/shape_bottom_player"
         app:layout_constraintBottom_toBottomOf="parent"
