--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,9 @@
     <color name="text_bottom_player">#4A4A4A</color>
     <color name="color_shape">#FF94B8</color>
 
+    <color name="color_sample_bg">#CDCDCD</color>
+    <color name="color_sample_transparent">#00000000</color>
+
     <color name="text_options_dark">#4A4A4A</color>
     <color name="text_options_light">#737373</color>
 </resources>
