--- a/app/src/main/res/layout/activity_playlist_songs_page.xml
+++ b/app/src/main/res/layout/activity_playlist_songs_page.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/bg_bottom_player"
+    android:background="@color/bg_main_activity"
     android:layout_height="match_parent"
     tools:context=".view.screen.PagePlaylistSongsActivity">
 
@@ -12,10 +12,15 @@
         android:id="@+id/page_playlist_songs_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="60dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="8"
-        tools:listitem="@layout/sample_playlist_songs_page"/>
+        tools:listitem="@layout/sample_songs_page"/>
+
+    <FrameLayout
+        android:id="@+id/page_playlist_songs_bottom_player"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
